@@ -1,40 +1,47 @@
 package se.sbab.busservices.services;
 
 import org.junit.Assert;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.runner.RunWith;
-import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
-import org.mockito.Spy;
+import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.autoconfigure.ImportAutoConfiguration;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.ComponentScan;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.test.context.web.WebAppConfiguration;
-import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.util.UriBuilder;
 import reactor.core.publisher.Mono;
 import se.sbab.busservices.config.ConfigProperties;
-import se.sbab.busservices.response.*;
-import se.sbab.busservices.utils.BusModelType;
+import se.sbab.busservices.model.*;
 
+import java.net.URI;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.function.Function;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 
 @RunWith(SpringJUnit4ClassRunner.class)
 @WebAppConfiguration
+@ImportAutoConfiguration
+@ComponentScan("se.*")
 public class BusLineServiceTest {
 
-    @Spy
-    private BusLineServiceImpl busLineServiceImpl;
+    @Autowired
+    private BusLineService busLineServiceImpl;
 
-    @Mock
+    @MockBean
     private WebClient webClientMock;
+
+    @MockBean
+    private ConfigProperties configProperties;
 
     @Mock
     private WebClient.RequestBodyUriSpec requestBodyUriSpecMock;
@@ -58,39 +65,46 @@ public class BusLineServiceTest {
 
     @BeforeEach
     public void beforeEach() {
-        ConfigProperties configProperties = new ConfigProperties();
-        configProperties.setBaseUrl("https://api.sl.se/api2/LineData.json");
-        configProperties.setKey("dc49f2dab16643c09b01d66953fd0871");
-        configProperties.setDefaultTransportModeCode("BUS");
-        ReflectionTestUtils.setField(busLineServiceImpl, "configProperties", configProperties);
     }
 
     @Test
-    @Ignore
     public void testTopTenBusLinesAndBusStopNames() {
-        ReflectionTestUtils.setField(busLineServiceImpl, "webClient", webClientMock);
-        when(webClientMock.get()).thenReturn(requestHeadersUriSpecMock);
-        when(requestHeadersUriSpecMock.uri(anyString())).thenReturn(requestHeadersSpecMock);
-        when(requestHeadersSpecMock.retrieve()).thenReturn(responseSpecMock);
-        when(responseSpecMock.bodyToMono(
-                ArgumentMatchers.<Class<TrafikLabResponse>>notNull())).thenReturn(Mono.just(getTrafikLabResponseLine()));
-        // Mono<TrafikLabResponse> response = webClientMock.get().retrieve();
-        //Assertions.assertEquals(1001, response.block().getId());
-        //Assertions.assertEquals("Some title", response.block().getTitle());
-        when(busLineServiceImpl.getBusServiceDetails(any(BusModelType.class), anyString())).thenReturn(getTrafikLabResponseLine());
-        when(busLineServiceImpl.getBusServiceDetails(any(BusModelType.class), anyString())).thenReturn(getTrafikLabResponseJourney());
-        when(busLineServiceImpl.getBusServiceDetails(any(BusModelType.class), anyString())).thenReturn(getTrafikLabResponseStopPoint());
-        List<BusResponse> busServices = busLineServiceImpl.getTopTenBusLinesAndBusStopNames();
+        final var responseSpecMock = Mockito.mock(WebClient.ResponseSpec.class);
+        when(webClientMock.get())
+                .thenReturn(requestHeadersUriSpecMock);
+        when(requestHeadersUriSpecMock.uri((Function<UriBuilder, URI>) Mockito.any()))
+                .thenReturn(requestHeadersSpecMock);
+        when(requestHeadersSpecMock.retrieve())
+                .thenReturn(responseSpecMock);
+        when(responseSpecMock.bodyToMono((Class<Object>) Mockito.any()))
+                .thenReturn(Mono.just(getTrafikLabResponseLine())).thenReturn(Mono.just(getTrafikLabResponseJourney())).thenReturn(Mono.just(getTrafikLabResponseStopPoint()));
+        List<BusLinesResponse> busServices = busLineServiceImpl.getTopTenBusLinesAndBusStopNames();
         Assert.assertNotNull("Getting response", busServices);
     }
 
-    private List<BusResponse> getBusResponses() {
-        BusResponse busResponse = new BusResponse();
+    @Test
+    public void testgetBusService() {
+        final var responseSpecMock = Mockito.mock(WebClient.ResponseSpec.class);
+        when(webClientMock.get())
+                .thenReturn(requestHeadersUriSpecMock);
+        when(requestHeadersUriSpecMock.uri((Function<UriBuilder, URI>) Mockito.any()))
+                .thenReturn(requestHeadersSpecMock);
+        when(requestHeadersSpecMock.retrieve())
+                .thenReturn(responseSpecMock);
+        when(responseSpecMock.bodyToMono((Class<Object>) Mockito.any()))
+                .thenReturn(Mono.just(getTrafikLabResponseLine())).thenReturn(Mono.just(getTrafikLabResponseJourney())).thenReturn(Mono.just(getTrafikLabResponseStopPoint()));
+        TrafikLabResponse busServiceResponse = busLineServiceImpl.getBusService("ModelType");
+        Assert.assertNotNull("Getting response", busServiceResponse);
+    }
+
+
+    private List<BusLinesResponse> getBusResponses() {
+        BusLinesResponse busResponse = new BusLinesResponse();
         busResponse.setBusLineName("636");
-        Collection<String> busStopNames = List.of("StationsGatan", "SundbybergStation", "SolnaBusinessPark", "SolnaCentrum",
+        Collection<String> busStopNames = Arrays.asList("StationsGatan", "SundbybergStation", "SolnaBusinessPark", "SolnaCentrum",
                 "Hudusta", "Hallonberg", "Risny", "Odenplan", "StockholmSodra", "SolnaStation");
         busResponse.setBusStopNames(busStopNames);
-        List<BusResponse> busResponses = new ArrayList<>();
+        List<BusLinesResponse> busResponses = new ArrayList<>();
         busResponses.add(busResponse);
         return busResponses;
     }
@@ -110,7 +124,7 @@ public class BusLineServiceTest {
         result.setDefaultTransportMode("blåbuss");
         result.setLastModifiedUtcDateTime("2007-08-24 00:00:00.000");
         result.setExistsFromDate("2007-08-24 00:00:00.000");
-        responseData.setResult(List.of(result));
+        responseData.setResult(Arrays.asList(result));
         response.setResponseData(responseData);
         return response;
     }
@@ -130,7 +144,7 @@ public class BusLineServiceTest {
         result.setStopAreaTypeCode("BUSTERM");
         result.setLastModifiedUtcDateTime("2022-10-28 00:00:00.000");
         result.setExistsFromDate("2022-10-28 00:00:00.000");
-        responseData.setResult(List.of(result));
+        responseData.setResult(Arrays.asList(result));
         response.setResponseData(responseData);
         return response;
     }
@@ -150,7 +164,7 @@ public class BusLineServiceTest {
         result.setJourneyPatternPointNumber("10008");
         result.setLastModifiedUtcDateTime("2022-02-15 00:00:00.000");
         result.setExistsFromDate("2022-02-15 00:00:00.000");
-        responseData.setResult(List.of(result));
+        responseData.setResult(Arrays.asList(result));
         response.setResponseData(responseData);
         return response;
     }
